klapt leider doch noch nicht..

--- a/web/user_rental_new.html
+++ b/web/user_rental_new.html
@@ -124,46 +124,22 @@
                     </div>
                     <div class="row">
                       <div class="col">
-                        <label for="inputCarID">Marke</label>
-                        <select id="inputCarID" class="form-control">
+                        <label for="selectmarke">Marke</label>
+                        <select id="selectmarke" class="form-control">
                           <option selected>Auswählen</option>
                           <option>...</option>
                         </select>
                       </div>
                       <div class="col">
-                        <label for="inputCarID">Modell</label>
-                        <select id="inputCarID" class="form-control">
+                        <label for="selectmedell">Modell</label>
+                        <select id="selectmodell" class="form-control">
                           <option selected>Auswählen</option>
                           <option>...</option>
                         </select>
                       </div>
                       <div class="col">
-                        <label for="inputCarID">Kraftstoff</label>
-                        <select id="inputCarID" class="form-control">
-                          <option selected>Auswählen</option>
-                          <option>...</option>
-                        </select>
-                      </div>
-                    </div>
-                      <p>
-                    <div class="row">
-                      <div class="col">
-                        <label for="inputCarID">Schaltung</label>
-                        <select id="inputCarID" class="form-control">
-                          <option selected>Auswählen</option>
-                          <option>...</option>
-                        </select>
-                      </div>
-                      <div class="col">
-                        <label for="inputCarID">Türen</label>
-                        <select id="inputCarID" class="form-control">
-                          <option selected>Auswählen</option>
-                          <option>...</option>
-                        </select>
-                      </div>
-                      <div class="col">
-                        <label for="inputCarID">Klima</label>
-                        <select id="inputCarID" class="form-control">
+                        <label for="selectkraftstoff">Kraftstoff</label>
+                        <select id="selectkraftstoff" class="form-control">
                           <option selected>Auswählen</option>
                           <option>...</option>
                         </select>
@@ -172,22 +148,46 @@
                       <p>
                     <div class="row">
                       <div class="col">
-                        <label for="inputCarID">Navigationsgerät</label>
-                        <select id="inputCarID" class="form-control">
+                        <label for="selectschaltung">Schaltung</label>
+                        <select id="selectschaltung" class="form-control">
                           <option selected>Auswählen</option>
                           <option>...</option>
                         </select>
                       </div>
                       <div class="col">
-                        <label for="inputCarID">Raucherwagen</label>
-                        <select id="inputCarID" class="form-control">
+                        <label for="selecttüren">Türen</label>
+                        <select id="selecttüren" class="form-control">
                           <option selected>Auswählen</option>
                           <option>...</option>
                         </select>
                       </div>
                       <div class="col">
-                        <label for="inputCarID">Stellplatznummer</label>
-                        <select id="inputCarID" class="form-control">
+                        <label for="selectklima">Klima</label>
+                        <select id="selectklima" class="form-control">
+                          <option selected>Auswählen</option>
+                          <option>...</option>
+                        </select>
+                      </div>
+                    </div>
+                      <p>
+                    <div class="row">
+                      <div class="col">
+                        <label for="selectnavigationsgerät">Navigationsgerät</label>
+                        <select id="selectnavigationsgerät" class="form-control">
+                          <option selected>Auswählen</option>
+                          <option>...</option>
+                        </select>
+                      </div>
+                      <div class="col">
+                        <label for="selectraucherwagen">Raucherwagen</label>
+                        <select id="selectrauchewagen" class="form-control">
+                          <option selected>Auswählen</option>
+                          <option>...</option>
+                        </select>
+                      </div>
+                      <div class="col">
+                        <label for="selectstellplatznummer">Stellplatznummer</label>
+                        <select id="selectstellplatznummer" class="form-control">
                           <option selected>Auswählen</option>
                           <option>...</option>
                         </select>
@@ -210,6 +210,7 @@
                 <script src="js/scripts.js"></script>
                 <script src="js/firebaseinit.js"></script>
                 <script src="js/login.js"></script>
+                <script src="js/get_car.js"></script>
 
             </div>
 
