--- a/web/user_rental_new.html
+++ b/web/user_rental_new.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Collapsible sidebar using Bootstrap 4</title>
+    <title>Neuen Auftrag erstellen</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -201,7 +201,7 @@
                         <textarea class="form-control" id="reason" rows="3"></textarea>
                       </div>
                     </div>
-                    <button type="submit" class="btn btn-primary btn-dark">buchen</button>
+                    <button type="submit" class="btn btn-primary btn-dark" onclick="addOrder()">buchen</button>
                 </form>
 
                 <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
@@ -210,6 +210,7 @@
                 <script src="js/scripts.js"></script>
                 <script src="js/firebaseinit.js"></script>
                 <script src="js/login.js"></script>
+                <script src="js/add_order.js"></script>
 
             </div>
 
