Tabellenfunktionen und add_order.js

--- a/web/user_rental_new.html
+++ b/web/user_rental_new.html
@@ -198,10 +198,10 @@
                     <div class="form-row">
                       <div class="form-group col-md-4">
                         <label for="inputReason">Leihgrund</label>
-                        <textarea class="form-control" id="reason" rows="3"></textarea>
+                        <textarea class="form-control" id="inputReason" rows="3"></textarea>
                       </div>
                     </div>
-                    <button type="submit" class="btn btn-primary btn-dark" onclick="addOrder()">buchen</button>
+                    <input class="btn btn-dark btn-lg btn-primary btn-block" type="button"  onclick="addOrder()" value="Hinzufuegen">
                 </form>
 
                 <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
