--- a/web/admin_user_new.html
+++ b/web/admin_user_new.html
@@ -207,7 +207,7 @@
                   <div class="row">
                       <div class="col-md-3"></div>
                       <div class="col-md-6">
-                          <button type="submit" class="btn btn-success" onclick="register()"><i class="fa fa-user-plus"></i> Register</button>
+                          <button type="submit" class="btn btn-success" onclick="addUser()"><i class="fa fa-user-plus"></i> Register</button>
                       </div>
                   </div>
               </form>
