user_rental_overview menu verändert datei support für admin / user hinzugefügt

--- a/web/user_rental_new.html
+++ b/web/user_rental_new.html
@@ -34,12 +34,20 @@
             </div>
 
             <ul class="list-unstyled components">
-                <li class="active"> <!-- aktiviert (auf der Seite) -->
-                    <a href="user_rental_overview.html">
-                      <i class="fas fa-key"></i>
-                        Rental Overview
-                    </a>
-                </li>
+              <li class="active"> <!-- aktiviert (auf der Seite) -->
+                  <a href="#rental" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <i class="fas fa-key"></i>
+                      Rental
+                  </a>
+                  <ul class="collapse list-unstyled" id="rental">
+                      <li>
+                          <a href="user_rental_overview.html">Overview</a>
+                      </li>
+                      <li>
+                          <a href="user_rental_new.html">NewOrder</a>
+                      </li>
+                  </ul>
+              </li>
                 <li>
                     <a href="user_profil.html">
                         <i class="fas fa-user"></i>
