in add_order die Fahrzeugattribute hinzugefügt user_rental_new: GUI verbessert user_rental_overview: Titel und GUI überarbeitet

--- a/web/user_rental_new.html
+++ b/web/user_rental_new.html
@@ -41,10 +41,10 @@
                   </a>
                   <ul class="collapse list-unstyled" id="rental">
                       <li>
-                          <a href="user_rental_overview.html">Overview</a>
+                          <a href="user_rental_overview.html">Übersicht</a>
                       </li>
                       <li>
-                          <a href="user_rental_new.html">NewOrder</a>
+                          <a href="user_rental_new.html">Antrag erstellen</a>
                       </li>
                   </ul>
               </li>
@@ -98,7 +98,7 @@
                 <form>
                   <div class="container">
                     <div class="row">
-                      <label for="inputReason" style="padding-bottom: 10px">Leihdatum</label>
+                      <label for="inputReason" style="padding-bottom: 10px" class="text-monospace">Leihdatum</label>
                     </div>
                     <div class="row">
                       <div class="col">
@@ -108,32 +108,30 @@
                         <input id="rueckgabedatum" width="300" value="Rückgabedatum: " />
                       </div>
                     </div>
+
                   </div>
                   <hr>
                   <div class="container">
                     <div class="row">
-                      <label for="inputReason" style="padding-bottom: 10px">Fahrzeug</label>
+                      <label for="inputReason" style="padding-bottom: 12px" class="text-monospace">Fahrzeug</label>
                     </div>
                     <div class="row">
                       <div class="col">
                         <label for="0">Marke</label>
                         <select id="0" class="form-control">
                           <option selected>Auswählen</option>
-                          <option>...</option>
                         </select>
                       </div>
                       <div class="col">
                         <label for="1">Modell</label>
                         <select id="1" class="form-control">
                           <option selected>Auswählen</option>
-                          <option>...</option>
                         </select>
                       </div>
                       <div class="col">
                         <label for="2">Kraftstoff</label>
                         <select id="2" class="form-control">
                           <option selected>Auswählen</option>
-                          <option>...</option>
                         </select>
                       </div>
                     </div>
@@ -143,21 +141,18 @@
                         <label for="3">Schaltung</label>
                         <select id="3" class="form-control">
                           <option selected>Auswählen</option>
-                          <option>...</option>
                         </select>
                       </div>
                       <div class="col">
                         <label for="4">Türen</label>
                         <select id="4" class="form-control">
                           <option selected>Auswählen</option>
-                          <option>...</option>
                         </select>
                       </div>
                       <div class="col">
                         <label for="5">Klima</label>
                         <select id="5" class="form-control">
                           <option selected>Auswählen</option>
-                          <option>...</option>
                         </select>
                       </div>
                     </div>
@@ -167,21 +162,18 @@
                         <label for="6">Navigationsgerät</label>
                         <select id="6" class="form-control">
                           <option selected>Auswählen</option>
-                          <option>...</option>
                         </select>
                       </div>
                       <div class="col">
                         <label for="7">Raucherwagen</label>
                         <select id="7" class="form-control">
                           <option selected>Auswählen</option>
-                          <option>...</option>
                         </select>
                       </div>
                       <div class="col">
                         <label for="8">Stellplatznummer</label>
                         <select id="8" class="form-control">
                           <option selected>Auswählen</option>
-                          <option>...</option>
                         </select>
                       </div>
                     </div>
@@ -189,7 +181,7 @@
                   <hr>
                     <div class="form-row">
                       <div class="form-group col-md-4">
-                        <label for="leihgrund">Leihgrund</label>
+                        <label for="leihgrund" class="text-monospace">Leihgrund</label>
                         <textarea class="form-control" id="leihgrund" rows="3"></textarea>
                       </div>
                     </div>
