--- a/web/user_rental_overview.html
+++ b/web/user_rental_overview.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Collapsible sidebar using Bootstrap 4</title>
+    <title>Übersicht</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -50,10 +50,10 @@
                     </a>
                     <ul class="collapse list-unstyled" id="rental">
                         <li>
-                            <a href="user_rental_overview.html">Overview</a>
+                            <a href="user_rental_overview.html">Übersicht</a>
                         </li>
                         <li>
-                            <a href="user_rental_new.html">NewOrder</a>
+                            <a href="user_rental_new.html">Antrag erstellen</a>
                         </li>
                     </ul>
                 </li>
@@ -154,7 +154,7 @@
             </table>
 
                 <div id="table_icon" style="cursor: pointer;">
-                  <a class="add" title="Add" data-toggle="tooltip"><i class="material-icons">&#xE03B;</i></a>
+                  <a class="add" title="Add" data-toggle="tooltip" href="user_rental_new.html"><i class="material-icons">&#xE03B;</i></a>
                 </div>
           </div>
 
