nur ein test, da function adduser mit klick auf register nicht aufgerufen wird. (restlicher Code in addUser ist gerade wohl eh noch Müll)

--- a/web/admin_user_new.html
+++ b/web/admin_user_new.html
@@ -241,6 +241,8 @@
     <script src="js/scripts.js"></script>
     <script src="js/firebaseinit.js"></script>
     <script src="js/login.js"></script>
+    <script src="js/add_user.js"></script>
+
 
 
 </body>
