Nutzer wird im firebase.auth() erstellt

--- a/web/admin_user_new.html
+++ b/web/admin_user_new.html
@@ -154,8 +154,7 @@
                           <div class="form-group">
                               <div class="input-group mb-2 mr-sm-2 mb-sm-0">
                                   <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-at"></i></div>
-                                  <input type="text" name="email" class="form-control" id="email"
-                                         placeholder="you@example.com" required autofocus>
+                                  <input type="text" name="email" class="form-control" id="email" placeholder="you@example.com" required autofocus />
                               </div>
                           </div>
                       </div>
@@ -175,8 +174,7 @@
                           <div class="form-group has-danger">
                               <div class="input-group mb-2 mr-sm-2 mb-sm-0">
                                   <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-key"></i></div>
-                                  <input type="password" name="password" class="form-control" id="password"
-                                         placeholder="Password" required>
+                                  <input type="password" name="password" class="form-control" id="password" placeholder="Password" required />
                               </div>
                           </div>
                       </div>
@@ -207,7 +205,8 @@
                   <div class="row">
                       <div class="col-md-3"></div>
                       <div class="col-md-6">
-                          <button type="submit" class="btn btn-success" onclick="addUser()"><i class="fa fa-user-plus"></i> Register</button>
+
+                          <input class="btn btn-dark btn-lg btn-primary btn-block" type="button"  onclick="addUser()" value="Register" />
                       </div>
                   </div>
               </form>
