--- a/web/user_rental_new.html
+++ b/web/user_rental_new.html
@@ -95,7 +95,31 @@
                   <h1 class="h2">Neuen Auftrag erstellen</h1>
                 </div>
 
-                <form>
+                <form id="addOrder">
+                  <div class="container">
+                    <div class="row">
+                      <label for="inputReason" style="padding-bottom: 10px" class="text-monospace">Auftraggeber</label>
+                    </div>
+                    <div class="row">
+                      <div class="col">
+                        <div class="input-group mb-3">
+                          <div class="input-group-prepend">
+                            <span class="input-group-text">Vorname</span>
+                          </div>
+                            <input id="vorname" type="text" class="form-control" placeholder="Rainer" aria-label="vorname" aria-describedby="basic-addon1">
+                        </div>
+                      </div>
+                      <div class="col">
+                        <div class="input-group mb-3">
+                          <div class="input-group-prepend">
+                            <span class="input-group-text">Name</span>
+                          </div>
+                            <input id="name" type="text" class="form-control" placeholder="Zufall">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <hr>
                   <div class="container">
                     <div class="row">
                       <label for="inputReason" style="padding-bottom: 10px" class="text-monospace">Leihdatum</label>
@@ -117,41 +141,20 @@
                     </div>
                     <div class="row">
                       <div class="col">
-                        <label for="0">Marke</label>
-                        <select id="0" class="form-control">
+                        <label for="marke">Marke</label>
+                        <select id="marke" class="form-control">
                           <option selected>Auswählen</option>
                         </select>
                       </div>
                       <div class="col">
-                        <label for="1">Modell</label>
-                        <select id="1" class="form-control">
+                        <label for="modell">Modell</label>
+                        <select id="modell" class="form-control">
                           <option selected>Auswählen</option>
                         </select>
                       </div>
                       <div class="col">
-                        <label for="2">Kraftstoff</label>
-                        <select id="2" class="form-control">
-                          <option selected>Auswählen</option>
-                        </select>
-                      </div>
-                    </div>
-                      <p>
-                    <div class="row">
-                      <div class="col">
-                        <label for="3">Schaltung</label>
-                        <select id="3" class="form-control">
-                          <option selected>Auswählen</option>
-                        </select>
-                      </div>
-                      <div class="col">
-                        <label for="4">Türen</label>
-                        <select id="4" class="form-control">
-                          <option selected>Auswählen</option>
-                        </select>
-                      </div>
-                      <div class="col">
-                        <label for="5">Klima</label>
-                        <select id="5" class="form-control">
+                        <label for="kraftstoff">Kraftstoff</label>
+                        <select id="kraftstoff" class="form-control">
                           <option selected>Auswählen</option>
                         </select>
                       </div>
@@ -159,20 +162,47 @@
                       <p>
                     <div class="row">
                       <div class="col">
-                        <label for="6">Navigationsgerät</label>
-                        <select id="6" class="form-control">
+                        <label for="schaltung">Schaltung</label>
+                        <select id="schaltung" class="form-control">
                           <option selected>Auswählen</option>
                         </select>
                       </div>
                       <div class="col">
-                        <label for="7">Raucherwagen</label>
-                        <select id="7" class="form-control">
+                        <label for="tueren">Türen</label>
+                        <select id="tueren" class="form-control">
                           <option selected>Auswählen</option>
                         </select>
                       </div>
                       <div class="col">
-                        <label for="8">Stellplatznummer</label>
-                        <select id="8" class="form-control">
+                        <label for="klima">Klima</label>
+                        <select id="klima" class="form-control">
+                          <option selected>Auswählen</option>
+                        </select>
+                      </div>
+                    </div>
+                      <p>
+                    <div class="row">
+                      <div class="col">
+                        <label for="navigationsgeraet">Navigationsgerät</label>
+                        <select id="navigationsgeraet" class="form-control">
+                          <option selected>Auswählen</option>
+                        </select>
+                      </div>
+                        <div class="col">
+                          <label for="plaetze">Plätze</label>
+                          <select id="plaetze" class="form-control">
+                            <option selected>Auswählen</option>
+                          </select>
+                        </div>
+                      <div class="col">
+                        <label for="raucherwagen">Raucherwagen</label>
+                        <select id="raucherwagen" class="form-control">
+                          <option selected>Auswählen</option>
+                        </select>
+                      </div>
+                      <div class="col">
+                        <label for="stellplatznummer">Stellplatznummer</label>
+                        <select id="stellplatznummer" class="form-control">
                           <option selected>Auswählen</option>
                         </select>
                       </div>
@@ -185,7 +215,7 @@
                         <textarea class="form-control" id="leihgrund" rows="3"></textarea>
                       </div>
                     </div>
-                    <input class="btn btn-dark btn-lg btn-primary btn-block" type="button"  onclick="addOrder()" value="Hinzufügen">
+                    <input class="btn btn-dark btn-lg btn-primary btn-block" type="button" onclick="addOrder()" value="Hinzufügen">
                 </form>
 
 
@@ -208,13 +238,14 @@
 
     <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
 
+
     <!-- Our Custom JS -->
     <script src="js/scripts.js"></script>
     <script src="js/firebaseinit.js"></script>
     <script src="js/login.js"></script>
     <script src="js/get_car.js"></script>
     <script src="js/add_order.js"></script>
-    <script> getCarData();</script>
+
 
 
 </body>
