--- a/web/admin_carpool_new.html
+++ b/web/admin_carpool_new.html
@@ -301,7 +301,7 @@
                   <div class="row">
                       <div class="col-md-3"></div>
                       <div class="col-md-6">
-                          <input class="btn btn-dark btn-lg btn-primary btn-block" type="button"  onclick="addCar()" onclick="addCarToTableRow();" value="Hinzufuegen">
+                          <input class="btn btn-dark btn-lg btn-primary btn-block" type="button"  onclick="addCar()" value="Hinzufuegen">
                       </div>
                   </div>
               </form>
