--- a/web/user_rental_overview.html
+++ b/web/user_rental_overview.html
@@ -99,49 +99,38 @@
 
             <div class="container">
             <div class="table-responsive-sm">
-            <table id="table"
+            <table id="order_table" class="order_table"
                  data-toggle="table"
                  data-search="true"
                  data-filter-control="true"
                  data-click-to-select="true"
                  data-toolbar="#toolbar">
             <thead>
-              <tr id="head">
+              <tr>
                 <th data-field="state" data-checkbox="true"></th>
-          			<th data-field="id" data-filter-control="input" data-sortable="true">ID</th>
-          			<th data-field="marke" data-filter-control="select" data-sortable="true">Marke</th>
-          			<th data-field="modell" data-filter-control="select" data-sortable="true">Modell</th>
-                <th data-field="kraftstoff" data-filter-control="select" data-sortable="true">Kraftstoff</th>
-          			<th data-field="schaltung" data-filter-control="select" data-sortable="true">Schaltung</th>
-                <th data-field="tueren" data-filter-control="select" data-sortable="true">Türen</th>
-                <th data-field="klima" data-filter-control="select" data-sortable="true">Klima</th>
-                <th data-field="navi" data-filter-control="select" data-sortable="true">Navigationsgerät</th>
-                <th data-field="raucherwagen" data-filter-control="select" data-sortable="true">Raucherwagen</th>
-                <th data-field="stellplatznummer" data-filter-control="select" data-sortable="true">Stellplatznummer</th>
+          			<th data-field="prenom" data-sortable="true">ID</th>
+                <th data-field="abholdatum" data-sortable="true">Abholdatum</th>
+                <th data-field="rueckgabedatum" data-sortable="true">Rückgabedatum</th>
+          			<th data-field="marke" data-sortable="true">Marke</th>
+          			<th data-field="modell" data-sortable="true">Modell</th>
+                <th data-field="kraftstoff" data-sortable="true">Kraftstoff</th>
+          			<th data-field="schaltung" data-sortable="true">Schaltung</th>
+                <th data-field="tueren" data-sortable="true">Türen</th>
+                <th data-field="klima" data-sortable="true">Klima</th>
+                <th data-field="navigationsgeraet" data-sortable="true">Navigationsgerät</th>
+                <th data-field="raucherwagen" data-sortable="true">Raucherwagen</th>
+                <th data-field="stellplatznummer" data-sortable="true">Stellplatznummer</th>
           		</tr>
           	</thead>
-          	<tbody>
-          		<tr id="zeile">
-          			<td class="bs-checkbox "><input data-index="0" name="btSelectItem" type="checkbox"></td>
-                <td id="id"></td>
-                <td id="marke"></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
+            	<tbody id="order_table_body">
+
 
              </tbody>
             </table>
           </div>
 
                 <div id="table_icon" style="cursor: pointer;">
-                  <a class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
-                  <a class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
+                  <a class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons" onclick="deleteOrderTableRow">&#xE872;</i></a>
                   <a class="add" title="Add" data-toggle="tooltip" href="user_rental_new.html"><i class="material-icons">&#xE03B;</i></a>
                 </div>
 
@@ -174,7 +163,7 @@
     <script src="js/scripts.js"></script>
     <script src="js/firebaseinit.js"></script>
     <script src="js/login.js"></script>
-    <script src="js/get_order.js"></script>
+    <script src="js/user_write_order_table.js"></script>
 
 </body>
 
