--- a/web/admin_carpool_new.html
+++ b/web/admin_carpool_new.html
@@ -337,6 +337,7 @@
     <script src="js/scripts.js"></script>
     <script src="js/firebaseinit.js"></script>
     <script src="js/login.js"></script>
+    <!-- in der folgenden js Datei befindet sich die Logik der Funktionen -->
     <script src="js/add_car.js"></script>
 
 
