--- a/web/admin_carpool_overview.html
+++ b/web/admin_carpool_overview.html
@@ -193,6 +193,8 @@
     <script src="js/scripts.js"></script>
     <script src="js/firebaseinit.js"></script>
     <script src="js/login.js"></script>
+    <!-- Mit der Verlinkung auf die js kann die Autoübersicht aus der DB geholt werden -->
+    <script src="js/write_carpool_table.js"></script>
 
 
 </body>
